Adds Sass and NHS front-end kit

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start -p $PORT"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "next": "9.3.5",
+    "nhsuk-frontend": "^3.0.4",
+    "node-sass": "^4.13.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
