Implement GovNotify by George and Luke 8)

--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "classnames": "^2.2.6",
+    "dotenv-load": "^2.0.0",
     "isomorphic-unfetch": "^3.0.0",
     "nanoid": "^3.1.3",
     "next": "9.3.5",
+    "next-env": "^1.1.1",
     "nhsuk-frontend": "^3.0.4",
     "node-sass": "^4.13.1",
+    "notifications-node-client": "^4.7.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
