--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "classnames": "^2.2.6",
     "isomorphic-unfetch": "^3.0.0",
     "nanoid": "^3.1.3",
     "next": "9.3.5",
