--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@zeit/next-sass": "^1.0.1",
     "classnames": "^2.2.6",
     "dotenv-load": "^2.0.0",
+    "google-libphonenumber": "^3.2.8",
     "isomorphic-unfetch": "^3.0.0",
     "nanoid": "^3.1.3",
     "next": "9.3.5",
