--- a/package.json
+++ b/package.json
@@ -31,8 +31,20 @@
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "husky": "^4.2.5",
     "jest": "^25.3.0",
     "jest-css-modules-transform": "^4.0.0",
+    "lint-staged": "^10.1.3",
     "prettier": "^2.0.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,css,md,yml}": [
+      "prettier --write"
+    ]
   }
 }
