--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "classnames": "^2.2.6",
+    "cookie": "^0.4.0",
     "dotenv-load": "^2.0.0",
     "google-libphonenumber": "^3.2.8",
     "isomorphic-unfetch": "^3.0.0",
@@ -24,7 +25,6 @@
     "next-env": "^1.1.1",
     "nhsuk-frontend": "^3.0.4",
     "node-sass": "^4.13.1",
-    "nookies": "^2.2.2",
     "notifications-node-client": "^4.7.3",
     "pg-promise": "^10.5.0",
     "react": "16.13.1",
