Adds `/session` API route to generate token

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-env": "^1.1.1",
     "nhsuk-frontend": "^3.0.4",
     "node-sass": "^4.13.1",
+    "nookies": "^2.2.2",
     "notifications-node-client": "^4.7.3",
     "pg-promise": "^10.5.0",
     "react": "16.13.1",
