--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv-load": "^2.0.0",
     "google-libphonenumber": "^3.2.8",
     "isomorphic-unfetch": "^3.0.0",
+    "moment": "^2.24.0",
     "nanoid": "^3.1.3",
     "next": "9.3.5",
     "next-env": "^1.1.1",
