--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "notifications-node-client": "^4.7.3",
     "pg-promise": "^10.5.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "sequelize": "^5.21.6"
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
@@ -39,7 +40,8 @@
     "jest": "^25.3.0",
     "jest-css-modules-transform": "^4.0.0",
     "lint-staged": "^10.1.3",
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.4",
+    "sequelize-cli": "^5.5.1"
   },
   "husky": {
     "hooks": {
