--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.2",
     "husky": "^4.2.5",
     "jest": "^25.3.0",
     "jest-css-modules-transform": "^4.0.0",
