Use npm ci rather than install

--- a/circle.yml
+++ b/circle.yml
@@ -11,11 +11,11 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
-            - run: npm install
+            - run: npm ci
             - run: npm build
             - run: npm run test:ci
 
 workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+  build-and-test:
+    jobs:
+      - build-and-test
