Run build as part of circle

--- a/circle.yml
+++ b/circle.yml
@@ -12,8 +12,8 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm ci
-            - run: npm build
             - run: npm run test:ci
+            - run: npm run build
 
 workflows:
   build-and-test:
