--- a/circle.yml
+++ b/circle.yml
@@ -1,22 +1,15 @@
 version: 2.1
-
 orbs:
-  node: circleci/node@1.1.6
-
-jobs:
-  build-and-test:
-    executor:
-      name: node/default
-    steps:
-      - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm rebuild node-sass
-            - run: npm run test:ci
-            - run: npm run build
-
+  cypress: cypress-io/cypress@1
 workflows:
-  build-and-test:
+  build:
     jobs:
-      - build-and-test
+      - cypress/install:
+          build: "npm run build" # run a custom app build step
+      - cypress/run:
+          requires:
+            - cypress/install
+          parallel: true # split all specs across machines
+          parallelism: 4 # use 4 CircleCI machines to finish quickly
+          group: "all tests" # name this group "all tests" on the dashboard
+          start: "npm run dev" # start server before running tests
