--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "license": "MIT",
   "scripts": {
+    "build": "next build",
+    "cypress:open": "cypress open",
+    "e2e": "cypress run --headless",
     "dev": "next dev",
     "format": "prettier --write '{pages,pageTests,src}/**/*.{js,css,md,yml}'",
     "format:check": "prettier --check '{pages,pageTests,src}/**/*.{js,css,md,yml}'",
+    "start": "next start -p $PORT",
     "test": "jest",
-    "test:watch": "jest --watch",
     "test:ci": "npm run format:check && jest",
-    "build": "next build",
-    "start": "next start -p $PORT"
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
@@ -36,6 +38,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.2",
+    "cypress": "^4.4.1",
     "husky": "^4.2.5",
     "jest": "^25.3.0",
     "jest-css-modules-transform": "^4.0.0",
