--- a/circle.yml
+++ b/circle.yml
@@ -1,14 +1,39 @@
 version: 2.1
 orbs:
   cypress: cypress-io/cypress@1
+  node: circleci/node@1.1.6
+
+jobs:
+  build-and-test:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/with-cache:
+          steps:
+            - run: npm install
+            - run: npm rebuild node-sass
+            - run: npm run test:ci
+            - run: npm run build
+
 workflows:
   build:
+    docker:
+      - image: circleci/postgres:12
+        environment:
+          POSTGRES_USER: circleci
+          POSTGRES_PASSWORD: super-secret
+          POSTGRES_DB: nhs_visit
+
     jobs:
+      - build-and-test
       - cypress/install:
           build: "npm run build" # run a custom app build step
       - cypress/run:
           requires:
             - cypress/install
+          environment:
+            URI: postgres://circleci:super-secret@localhost/nhs_visit
           parallel: true # split all specs across machines
           parallelism: 4 # use 4 CircleCI machines to finish quickly
           group: "all tests" # name this group "all tests" on the dashboard
