Run tests single threaded..
Apparently this prevents the memory issues we're seeing in CircleCI

We've probably got the point where we have enough tests that we're now
pushing the boundaries of multi-threading?

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "format:check": "prettier --check '{pages,pageTests,src}/**/*.{js,css,md,yml}'",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:ci": "npm run format:check && jest",
+    "test:ci": "npm run format:check && jest --runInBand",
     "build": "next build",
     "start": "next start -p $PORT",
     "cleandb": "node db/scripts/cleanup_scheduled_calls.js"
