--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nookies": "^2.2.2",
     "notifications-node-client": "^4.7.3",
     "pg-promise": "^10.5.0",
+    "query-string": "^6.12.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
