Install express and heroku ssl redirect libs

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "classnames": "^2.2.6",
     "cookie": "^0.4.0",
     "dotenv-load": "^2.0.0",
+    "express": "^4.17.1",
     "google-libphonenumber": "^3.2.8",
+    "heroku-ssl-redirect": "0.0.4",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
