--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "pg-promise": "^10.5.2",
     "query-string": "^6.12.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "@sentry/browser": "^5.15.5",
+    "@sentry/node": "^5.15.5",
+    "@sentry/webpack-plugin": "^1.11.1",
+    "@zeit/next-source-maps": "0.0.4-canary.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.5.0",
