--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "format:check": "prettier --check '{pages,pageTests,src}/**/*.{js,css,md,yml}'",
     "lint": "eslint . --ext .js",
     "test": "jest",
+    "test:contract": "jest --config ./jest.contract.config.js",
+    "test:contract:watch": "npm run test:contract -- --watch",
     "test:watch": "jest --watch",
-    "test:ci": "npm run format:check && jest --runInBand",
+    "test:ci": "npm run format:check && npm run test:contract -- --runInBand && npm run test -- --runInBand",
     "build": "next build",
     "dev": "NODE_ENV=development node server.js",
     "start": "NODE_ENV=production node server.js",
