--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.4",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "jest-css-modules-transform": "^4.0.0",
