Revert "Add eslint to husky"
This reverts commit c48669dde9554567660544f8394a748c8fd807ad.

--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
   },
   "lint-staged": {
     "*.{js,css,md,yml}": [
-      "prettier --write",
-      "eslint --fix --ext .js"
+      "prettier --write"
     ]
   },
   "engines": {
