--- a/package.json
+++ b/package.json
@@ -15,12 +15,20 @@
     "build": "next build",
     "dev": "NODE_ENV=development node server.js",
     "start": "NODE_ENV=production node server.js",
-    "cleandb": "node db/scripts/cleanup_scheduled_calls.js"
+    "cleandb": "node db/scripts/cleanup_scheduled_calls.js",
+    "dbmigrate": "db-migrate --migrations-dir 'db/migrations/'",
+    "dbmigratedry": "db-migrate --dry-run --migrations-dir 'db/migrations/'"
   },
   "dependencies": {
+    "@sentry/browser": "^5.15.5",
+    "@sentry/node": "^5.15.5",
+    "@sentry/webpack-plugin": "^1.11.1",
     "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-source-maps": "0.0.4-canary.1",
     "classnames": "^2.2.6",
     "cookie": "^0.4.1",
+    "db-migrate": "^0.11.11",
+    "db-migrate-pg": "^1.2.1",
     "dotenv-load": "^2.0.0",
     "express": "^4.17.1",
     "google-libphonenumber": "^3.2.9",
@@ -38,11 +46,7 @@
     "pg-promise": "^10.5.2",
     "query-string": "^6.12.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "@sentry/browser": "^5.15.5",
-    "@sentry/node": "^5.15.5",
-    "@sentry/webpack-plugin": "^1.11.1",
-    "@zeit/next-source-maps": "0.0.4-canary.1"
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.7.0",
