Minor readme updates

--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
   },
   "lint-staged": {
     "*.{js,css,md,yml}": [
-      "prettier --write",
+      "prettier --write"
+    ],
+    "*.js": [
       "eslint --fix --ext .js"
     ]
   },
