--- a/app.json
+++ b/app.json
@@ -1,7 +1,10 @@
 {
   "environments": {
     "review": {
-      "addons": ["heroku-postgresql:hobby-dev"]
+      "addons": ["heroku-postgresql:hobby-dev"],
+      "scripts": {
+        "postdeploy": "npm run dbmigrate up && psql -f 'db/seeds.sql' $DATABASE_URL"
+      }
     }
   }
 }
