--- a/app.json
+++ b/app.json
@@ -1,8 +1,7 @@
 {
   "environments": {
     "review": {
-      "addons": ["heroku-postgresql:hobby-dev"],
-      "postdeploy": "psql -f 'db/seeds.sql'"
+      "addons": ["heroku-postgresql:hobby-dev"]
     }
   }
 }
