--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "environments": {
     "review": {
-      "addons": ["heroku-postgresql:hobby-dev"]
+      "addons": ["heroku-postgresql:hobby-dev"],
+      "postdeploy": "npm run dbmigrate up"
     }
   }
 }
