--- a/app.json
+++ b/app.json
@@ -2,7 +2,9 @@
   "environments": {
     "review": {
       "addons": ["heroku-postgresql:hobby-dev"],
-      "postdeploy": "npm run dbmigrate up"
+      "scripts": {
+        "postdeploy": "npm run dbmigrate up"
+      }
     }
   }
 }
