--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "environments": {
     "review": {
-      "addons": ["heroku-postgresql:hobby-dev"]
+      "addons": ["heroku-postgresql:hobby-dev"],
+      "scripts": {
+        "postdeploy": "npm run dbmigrate up"
+      }
     }
-  },
-  "scripts": {
-    "pr-postdeploy": "npm run dbmigrate up"
   }
 }
