--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sentry/browser": "^5.15.5",
     "@sentry/node": "^5.15.5",
     "@sentry/webpack-plugin": "^1.11.1",
+    "@slack/web-api": "^5.8.1",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "0.0.4-canary.1",
     "classnames": "^2.2.6",
