--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@slack-wrench/jest-mock-web-client": "^1.1.1",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^10.0.4",
     "babel-eslint": "^10.1.0",
