--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "heroku-ssl-redirect": "0.0.4",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
+    "mockdate": "^2.0.5",
     "moment": "^2.24.0",
     "nanoid": "^3.1.3",
     "next": "9.3.6",
