--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,17 @@ orbs:
   node: circleci/node@1.1.6
 
 jobs:
-  build-and-test:
+  build:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/with-cache:
+          steps:
+            - run: npm install
+            - run: npm rebuild node-sass
+            - run: npm run build
+  test:
     executor:
       name: node/default
     steps:
@@ -14,9 +24,9 @@ jobs:
             - run: npm install
             - run: npm rebuild node-sass
             - run: npm run test:ci
-            - run: npm run build
 
 workflows:
   build-and-test:
     jobs:
-      - build-and-test
+      - build
+      - test
