--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ yarn-error.log*
 .env.production.local
 .vscode
 /.idea
+
+# Cypress to ignore
+cypress/videos
+cypress/fixtures
+cypress/plugins
+cypress/support
