--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "format": "prettier --write '{pages,pageTests,src}/**/*.{js,css,md,yml}'",
     "format:check": "prettier --check '{pages,pageTests,src}/**/*.{js,css,md,yml}'",
     "lint": "eslint . --ext .js",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
+    "test": "jest --silent",
+    "test:coverage": "jest --silent --coverage",
     "test:contract": "jest --config ./jest.contract.config.js",
     "test:contract:watch": "npm run test:contract -- --watch",
-    "test:watch": "jest --watch",
+    "test:watch": "jest --watch --silent",
     "test:ci": "npm run format:check && npm run test:contract -- --runInBand && npm run test -- --runInBand",
     "build": "next build",
     "dev": "NODE_ENV=development node server.js",
