--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext .js",
     "test": "jest --silent",
     "test:coverage": "jest --silent --coverage",
-    "test:contract": "jest --config ./jest.contract.config.js",
+    "test:contract": "jest --config ./jest.contract.config.js --runInBand",
     "test:contract:watch": "npm run test:contract -- --watch",
     "test:watch": "jest --watch --silent",
     "test:ci": "npm run format:check && npm run test:contract -- --runInBand && npm run test -- --runInBand",
