Ensure the test-server uses the TEST_DATABASE_URL connection
next.js only supports 2 NODE_ENV environments, development and production.
If you pass in NODE_ENV=test to server.js, it will set the NODE_ENV to development

This change uses a seperate ENV variable to set it to test

Co-authored-by: Wen Ting Wang <chubberlisk@outlook.com>

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:ci": "npm run format:check && npm run test:contract -- --runInBand && npm run test -- --runInBand",
     "build": "next build",
     "dev": "NODE_ENV=development node server.js",
-    "test-server": "NODE_ENV=test node server.js",
+    "test-server": "ENV=test NODE_ENV=development node server.js",
     "start": "NODE_ENV=production node server.js",
     "cleandb": "node db/scripts/cleanup_scheduled_calls.js",
     "db:seed": "node db/scripts/seed_database.js",
