--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ executors:
           POSTGRES_PASSWORD:
           POSTGRES_DB: nhs-virtual-visit-test
     environment:
-      ENV: test
+      APP_ENV: test
       TEST_DATABASE_URL: postgresql://root@localhost/nhs-virtual-visit-test
       JWT_SIGNING_KEY: UdGgQx0pGBV0yvM6Chxp6h/cIFLwuYy/2XDR/1lQX5CpcFWnA==
 
@@ -33,13 +33,13 @@ jobs:
     docker:
       - image: circleci/node:12
       - environment:
-          ENV: test
+          APP_ENV: test
           POSTGRES_USER: root
           POSTGRES_PASSWORD:
           POSTGRES_DB: nhs-virtual-visit-test
         image: "circleci/postgres:12.2"
     environment:
-      ENV: test
+      APP_ENV: test
       TEST_DATABASE_URL: postgresql://root@localhost/nhs-virtual-visit-test
     executor:
       name: node/default
