--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@sentry/webpack-plugin": "^1.11.1",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "0.0.4-canary.1",
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.2.6",
     "cookie": "^0.4.1",
     "db-migrate": "^0.11.11",
