Make uuid-validate a normal dependency
Previously used as a dev dependency. This causes issues because it is used
in the fake notify client that is referenced in the GovNotify gateway

Co-authored-by: Wen Ting Wang <chubberlisk@outlook.com>
Co-authored-by: Antony O'Neill <antony.oneill@madetech.com>
Co-authored-by: Rob Marshall <robert.marshall@madetech.com>
Co-authored-by: Stu Mackellar <stu.mackellar@madetech.com>

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "pg-promise": "^10.5.2",
     "query-string": "^6.12.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "uuid-validate": "0.0.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.10.1",
@@ -68,8 +69,7 @@
     "jest": "^26.0.1",
     "jest-css-modules-transform": "^4.0.0",
     "lint-staged": "^10.2.10",
-    "prettier": "^2.0.5",
-    "uuid-validate": "0.0.3"
+    "prettier": "^2.0.5"
   },
   "husky": {
     "hooks": {
