Add uuid package
Co-authored-by: Stu Mackellar <mackella@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "query-string": "^6.12.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "uuid": "^8.1.0",
     "uuid-validate": "0.0.3"
   },
   "devDependencies": {
