--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jsonwebtoken": "^8.5.1",
     "mockdate": "^2.0.5",
     "moment": "^2.24.0",
+    "moment-duration-format": "^2.3.2",
     "nanoid": "^3.1.3",
     "next": "9.3.6",
     "next-env": "^1.1.1",
