Only run the fork sync action on the kettering repository

--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - name: Fork Sync
         uses: TG908/fork-sync@v1.1.7
+        if: github.repository == 'Kettering-General-Hospital/nhs-virtual-visit'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           owner: madetech
