Fix the fork sync workflow
This was not running correctly on the kettering fork

I'm not entirely sure why but switching the name around and moving the if statement
up did the trick

--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -1,4 +1,4 @@
-name: Fork Sync
+name: Sync Fork
 
 on:
   schedule:
@@ -7,10 +7,10 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
+    if: github.repository == 'Kettering-General-Hospital/nhs-virtual-visit'
     steps:
       - name: Fork Sync
         uses: TG908/fork-sync@v1.1.7
-        if: github.repository == 'Kettering-General-Hospital/nhs-virtual-visit'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           owner: madetech
