Extract manual fork sync action to its own workflow
The fork sync workflow skips if the repo doesn't match the ones referenced in
the workflow. If you attempted to manually run that workflow on another repo, it
would be skipped because it was checking the same conditional.

This change extracts the manual sync to its own workflow so that you can run it
even if your repo is not in the list of automatically synced repos

--- a/.github/workflows/manual-fork-sync.yml
+++ b/.github/workflows/manual-fork-sync.yml
@@ -1,13 +1,11 @@
-name: Sync Fork
+name: Manually Sync Fork
 
 on:
-  schedule:
-    - cron: "*/10 * * * *"
+  workflow_dispatch:
 
 jobs:
   sync:
     runs-on: ubuntu-latest
-    if: (github.repository == 'Kettering-General-Hospital/nhs-virtual-visit') || (github.repository == 'London-North-West-Trust/nhs-virtual-visit')
     steps:
       - name: Fork Sync
         uses: TG908/fork-sync@v1.1.7
