--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test:contract:watch": "npm run test:contract -- --watch",
     "test:e2e": "cypress run --headless",
     "test:e2e:open": "cypress open",
+    "test:e2e:audit": "cypress run --headless --env runAudit=true",
+    "test:e2e:audit:open": "cypress open --env runAudit=true",
     "test:server": "APP_ENV=test NODE_ENV=development PORT=3001 node server.js",
     "test:coverage": "jest --silent --coverage",
     "test:ci": "npm run format:check && npm run test:contract -- --runInBand && npm run test -- --runInBand",
