--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "uuid": "^8.1.0",
-    "uuid-validate": "0.0.3"
+    "uuid-validate": "0.0.3",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
