--- a/circle.yml
+++ b/circle.yml
@@ -86,5 +86,5 @@ workflows:
           group: "1x-electron on CircleCI" # name this group
           post-install:
             - run: npm run test:migrate
-          start: "npm run test:server" # start server before running tests
+          start: "npm run test:server & wait-on http://localhost:3001" # start server before running tests
           store_artifacts: true
