installed wait-on packafe

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "uuid": "^8.1.0",
-    "uuid-validate": "0.0.3"
+    "uuid-validate": "0.0.3",
+    "wait-on": "^5.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.3",
