--- a/circle.yml
+++ b/circle.yml
@@ -74,6 +74,7 @@ workflows:
       # runs on 1 machine
       # and records on Cypress Dashboard
       - cypress/run:
+          executor: pg-cypress
           name: "End to end test"
           # job will use workspace with code and dependencies
           # installed by the "install" job
