--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "test:watch": "jest --watch",
     "test:contract": "jest --config ./jest.contract.config.js --runInBand",
     "test:contract:watch": "npm run test:contract -- --watch",
-    "test:e2e": "npm run test:migrate && cypress run --headless",
-    "test:e2e:open": "npm run test:migrate && cypress open",
-    "test:e2e:audit": "npm run test:migrate && cypress run --headless --env runAudit=true performance=true",
-    "test:e2e:audit:open": "npm run test:migrate && cypress open --env runAudit=true performance=true",
+    "test:e2e": "cypress run --headless",
+    "test:e2e:open": "cypress open",
+    "test:e2e:audit": "cypress run --headless --env runAudit=true performance=true",
+    "test:e2e:audit:open": "cypress open --env runAudit=true performance=true",
     "test:server": "APP_ENV=test NODE_ENV=development PORT=3001 node server.js",
     "test:coverage": "jest --silent --coverage",
     "test:ci": "npm run format:check && npm run test:contract -- --runInBand && npm run test -- --runInBand",
     "test:migrate": "npm run dbmigratetest reset && npm run dbmigratetest up && npm run db:seed",
-    "test:e2e2:open": "npm run test:migrate && npm run test:e2e:open",
+    "test:e2e2:open": "npm run test:e2e:open",
     "build": "next build",
     "dev": "NODE_ENV=development node server.js",
     "start": "NODE_ENV=production node server.js",
