--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:contract": "jest --config ./jest.contract.config.js --runInBand",
     "test:contract:watch": "npm run test:contract -- --watch",
     "test:e2e": "cypress run --headless",
-    "test:e2e:open": "cypress open",
+    "test:e2e:open": "NODE_ENV=development cypress open",
     "test:e2e:audit": "cypress run --headless --env runAudit=true performance=true",
     "test:e2e:audit:open": "cypress open --env runAudit=true performance=true",
     "test:server": "APP_ENV=test NODE_ENV=development PORT=3001 node server.js",
