--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "@sentry/browser": "^5.15.5",
     "@sentry/node": "^5.15.5",
     "@sentry/webpack-plugin": "^1.11.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "0.0.4-canary.1",
+    "babel-jest": "^26.3.0",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.2.6",
     "cookie": "^0.4.1",
@@ -43,6 +46,8 @@
     "google-libphonenumber": "^3.2.9",
     "heroku-ssl-redirect": "0.0.4",
     "isomorphic-unfetch": "^3.0.0",
+    "jest": "^26.4.2",
+    "jest-css-modules-transform": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
     "mockdate": "^2.0.5",
     "moment": "^2.24.0",
@@ -63,8 +68,6 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.4",
     "babel-eslint": "^10.1.0",
     "cypress": "^5.2.0",
     "cypress-audit": "^0.2.3",
@@ -72,8 +75,6 @@
     "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-react": "^7.21.2",
     "husky": "^4.3.0",
-    "jest": "^26.4.2",
-    "jest-css-modules-transform": "^4.0.1",
     "lint-staged": "^10.4.0",
     "prettier": "^2.1.2"
   },
