--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: "3"
 
 services:
-  vv:
+  vv_test:
     build: .
     ports:
       - 3000:3000
+      - 3001:3001
     depends_on:
       - postgres
     links:
