--- a/.github/workflows/azure_virtualvisitsdemo.yml
+++ b/.github/workflows/azure_virtualvisitsdemo.yml
@@ -21,6 +21,14 @@ jobs:
         node-version: '12.x'
 
     - name: npm install, build, and test
+      env:
+        API_KEY: ${{ secrets.API_KEY }}
+        EMAIL_INITIAL_TEMPLATE_ID:  ${{ secrets.EMAIL_INITIAL_TEMPLATE_ID }}
+        EMAIL_JOIN_TEMPLATE_ID: ${{ secrets.EMAIL_JOIN_TEMPLATE_ID }}
+        EMAIL_UPDATED_VISIT_TEMPLATE_ID: ${{ secrets.EMAIL_UPDATED_VISIT_TEMPLATE_ID }}
+        SMS_INITIAL_TEMPLATE_ID: ${{ secrets.SMS_INITIAL_TEMPLATE_ID }}
+        SMS_JOIN_TEMPLATE_ID: ${{ secrets.SMS_JOIN_TEMPLATE_ID }}
+        SMS_UPDATED_VISIT_TEMPLATE_ID: ${{ secrets.SMS_UPDATED_VISIT_TEMPLATE_ID }}
       run: |
         npm install
         npm run build --if-present
