--- a/.github/workflows/azure_virtualvisitsdemo.yml
+++ b/.github/workflows/azure_virtualvisitsdemo.yml
@@ -32,7 +32,7 @@ jobs:
           npm run test --if-present
 
       - name: "Login to Azure via CLI"
-        uses: azure/login@1
+        uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
