Modified target zip path

--- a/.github/workflows/azure_virtualvisitsdemo.yml
+++ b/.github/workflows/azure_virtualvisitsdemo.yml
@@ -80,4 +80,4 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       
       - name: "Deploy Zip to Azure App Service"
-        run: az webapp deployment source config-zip --resource-group virtualvisits --name virtualvisitsdemo --src clouddrive/package.zip
+        run: az webapp deployment source config-zip --resource-group virtualvisits --name virtualvisitsdemo --src package.zip
