--- a/.github/workflows/azure_virtualvisitsdemo.yml
+++ b/.github/workflows/azure_virtualvisitsdemo.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: "Build and push Docker image to ACR"
+      - name: "Build and publish Docker image to Azure Container Registry"
         uses: azure/docker-login@v1
         with:
           login-server: ${{ secrets.ACR_SERVER }}
@@ -45,3 +45,9 @@ jobs:
       - run: |
           docker build . -t ${{ secrets.ACR_SERVER }}/virtualvisits:${{ github.sha }}
           docker push ${{ secrets.ACR_SERVER }}/virtualvisits:${{ github.sha }}
+        
+      - name: "Deploy Docker iamge to Azure App Service"
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'virtualvisits'
+          images: '${{ secrets.ACR_SERVER }}/virtualvisits:${{ github.sha }}'
