--- a/app.json
+++ b/app.json
@@ -1,9 +1,15 @@
 {
   "environments": {
+    "test": {
+      "scripts": {
+        "test": "npm run test"
+      }
+    },
     "review": {
       "addons": ["heroku-postgresql:hobby-dev"],
       "scripts": {
         "postdeploy": "psql -f 'db/seeds.sql' $DATABASE_URL"
+
       }
     }
   },
