--- a/.github/workflows/deploy_aws_eb.yml
+++ b/.github/workflows/deploy_aws_eb.yml
@@ -36,4 +36,5 @@ jobs:
           application_name: VirtualvisitsEb
           environment_name: VirtualvisitsEb-env
           region: eu-west-2
+          version_label: 12345
           deployment_package: deploy.zip
