--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "next build",
     "build-production": "NODE_ENV=production next build",
     "dev": "NODE_ENV=development node server.js",
-    "start": "NODE_ENV=production node server.js",
+    "start": "NODE_ENV=production PORT=8080 node server.js",
     "cleandb": "node db/scripts/cleanup_scheduled_calls.js",
     "db:seed": "node db/scripts/seed_database.js",
     "dbmigrate": "db-migrate --migrations-dir 'db/migrations/'",
