Run gha ci on ci branch

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,7 +5,7 @@ name: Virtual Visits CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, gha-ci ]
   pull_request:
     branches: [ master ]
 
